# voltage

./: Cargo.toml  a.out
examples/: add.volt  if_statement.volt  simple.volt
src/: main.rs
voltage_ast/: Cargo.toml
voltage_ast/src/: expressions.rs  lib.rs  statements.rs
voltage_codegen/: Cargo.toml
voltage_codegen/src/builtin/: envoirment.rs  mod.rs
voltage_lexer/: Cargo.toml
voltage_lexer/src/: lib.rs  tokens.rs
voltage_parser/: Cargo.toml
voltage_parser/src/: lib.rs
voltage_typecheck/: Cargo.toml
